Cycles : Texture Loading : 42k by 21k textures crash Cycles #44616

Closed
opened 2015-05-06 10:31:27 +02:00 by Carlo Andreacchio · 10 comments

System Information
Windows 7 x64, gtx 580
Amazon EC2, c4.8xlarge , 60GB Ram

Blender Version
Broken: bc2f77e

Short description of error
Cycles crashes when loading 42k by 21k textures

Exact steps for others to reproduce the error

  1. Download attached blend file
  2. Try rendering via command line blender -b 42ktest.blend -f 1
  3. Crash

Cycles seems to work with 2 individual 21k by 21k textures.

Again, I know this is pretty rediculous... Just wanted to make it known on the tracker.

42ktest.blend

Also, The offer stands if a developer wants access to a ec2 server with 60GB ram to diagnose & fix the problem.

**System Information** Windows 7 x64, gtx 580 Amazon EC2, c4.8xlarge , 60GB Ram **Blender Version** Broken: bc2f77e **Short description of error** Cycles crashes when loading 42k by 21k textures **Exact steps for others to reproduce the error** 1. Download attached blend file 2. Try rendering via command line blender -b 42ktest.blend -f 1 3. Crash Cycles seems to work with 2 individual 21k by 21k textures. Again, I know this is pretty rediculous... Just wanted to make it known on the tracker. [42ktest.blend](https://archive.blender.org/developer/F170781/42ktest.blend) Also, The offer stands if a developer wants access to a ec2 server with 60GB ram to diagnose & fix the problem.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @candreacchio

Added subscriber: @candreacchio
Sergey Sharybin was assigned by Bastien Montagne 2015-05-06 10:53:37 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Can you share the texture itself somewhere? it'll help troubleshooting the issue locally here.

Can you share the texture itself somewhere? it'll help troubleshooting the issue locally here.

untitled.jpg is packed into the file and is 42k x 21k... is this not enough?

untitled.jpg is packed into the file and is 42k x 21k... is this not enough?

Ah, my fault. Was testing with prior-to-multiview version of blender, which made image to disappear due to changes in internal structures. Can see the image with current master and will check the issue soon then.

Ah, my fault. Was testing with prior-to-multiview version of blender, which made image to disappear due to changes in internal structures. Can see the image with current master and will check the issue soon then.

This issue was referenced by f0f481031c

This issue was referenced by f0f481031cc5eb57e848ca11a6989565c74a0e56

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f0f481031c.

Closed by commit f0f481031c.

This issue was referenced by blender/cycles@8eb75d24b8

This issue was referenced by blender/cycles@8eb75d24b85bdd9950ce37517a21b732d3f8c141
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44616
No description provided.